force-app/main/default/objects/Duplicate_Merge_Run__c/Duplicate_Merge_Run__c.object-meta.xml
<CustomObject>
  <label>Duplicate Merge Run</label>
  <nameField>
    <displayFormat>DMR-{000000}</displayFormat>
    <label>Merge Run Number</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Duplicate Merge Runs</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>