force-app/main/default/objects/Duplicate_Merge_Run__c/fields/Execution_Detail__c.field-meta.xml
<CustomField>
  <fullName>Execution_Detail__c</fullName>
  <label>Execution Detail</label>
  <length>32768</length>
  <type>LongTextArea</type>
</CustomField>