force-app/main/default/objects/Duplicate_Merge_Run__c/fields/Group__c.field-meta.xml
<CustomField>
  <fullName>Group__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Heuristic Group</label>
  <referenceTo>Heuristic_Duplicate_Group__c</referenceTo>
  <relationshipLabel>Duplicate Merge Runs</relationshipLabel>
  <relationshipName>DuplicateMergeRuns</relationshipName>
  <type>Lookup</type>
</CustomField>