force-app/main/default/objects/Duplicate_Merge_Run__c/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
  <fullName>Object_Api_Name__c</fullName>
  <label>Object API Name</label>
  <length>100</length>
  <type>Text</type>
</CustomField>