force-app/main/default/objects/Duplicate_Merge_Run__c/fields/Reparented_Record_Count__c.field-meta.xml
<CustomField>
  <fullName>Reparented_Record_Count__c</fullName>
  <label>Reparented Record Count</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>