force-app/main/default/objects/Duplicate_Merge_Run__c/fields/Scan__c.field-meta.xml
<CustomField>
  <fullName>Scan__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Scan</label>
  <referenceTo>Heuristic_Duplicate_Scan__c</referenceTo>
  <relationshipLabel>Duplicate Merge Runs</relationshipLabel>
  <relationshipName>DuplicateMergeRuns</relationshipName>
  <type>Lookup</type>
</CustomField>