force-app/main/default/objects/Duplicate_Merge_Run__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value>
        <fullName>In Progress</fullName>
        <default>true</default>
        <label>In Progress</label>
      </value>
      <value>
        <fullName>Completed</fullName>
      </value>
      <value>
        <fullName>Completed With Errors</fullName>
      </value>
      <value>
        <fullName>Failed</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>