force-app/main/default/objects/Duplicate_Merge_Run__c/fields/Summary__c.field-meta.xml
<CustomField>
  <fullName>Summary__c</fullName>
  <label>Summary</label>
  <length>2000</length>
  <type>LongTextArea</type>
</CustomField>