force-app/main/default/objects/Duplicate_Merge_Run__c/fields/Survivor_Display__c.field-meta.xml
<CustomField>
  <fullName>Survivor_Display__c</fullName>
  <label>Survivor Display</label>
  <length>255</length>
  <type>Text</type>
</CustomField>