force-app/main/default/objects/Duplicate_Merge_Run__c/fields/Survivor_Record_Id__c.field-meta.xml
<CustomField>
  <fullName>Survivor_Record_Id__c</fullName>
  <label>Survivor Record Id</label>
  <length>18</length>
  <type>Text</type>
</CustomField>