force-app/main/default/objects/Duplicate_Merge_Run__c/fields/Updated_Field_Count__c.field-meta.xml
<CustomField>
  <fullName>Updated_Field_Count__c</fullName>
  <label>Updated Field Count</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>