force-app/main/default/objects/Duplicate_Merge_Run__c/fields/Warnings__c.field-meta.xml
<CustomField>
  <fullName>Warnings__c</fullName>
  <label>Warnings</label>
  <length>32768</length>
  <type>LongTextArea</type>
</CustomField>